# materials-priority-tool

./: .gitignore  README.md  api.py  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/processed/: materials_master.csv  scoring_inputs.csv  worldbank_prices.csv
data/reference/: doe_criticality.csv  kc_logistics.csv  materials_baseline.csv
docs/: alerts_setup.md  api_guide.md  authentication.md  data_refresh_guide.md  executive_summary.md
docs/screenshots/: .gitkeep
pages/: 1_Priority_Rankings.py  2_Material_Deep_Dives.py  3_Tradeoff_Analysis.py  4_Market_Monitor.py  5_Uncertainty_Analysis.py
src/: __init__.py  alerts.py  auth.py  data_loader.py  data_processor.py  feedback.py  scoring.py  theme.py  tour.py  utils.py  visualizations.py
tests/: test_scoring.py
