[project]
name = "materials-priority-tool"
version = "0.1.0"
description = "A Streamlit dashboard for scoring and ranking critical materials to support supply chain prioritization decisions"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Deo"}
]
keywords = ["critical-materials", "supply-chain", "streamlit", "dashboard", "data-science"]

dependencies = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.18.0",
    "openpyxl>=3.1.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
geo = [
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
